Add social sharing tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,14 @@
   <title>film in the gaps</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta property="og:title" content="film in the gaps" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://filminthega.ps/" />
+  <meta property="og:image" content="assets/map_banner.jpg" />
+  <meta property="og:description" content="link two films in as few steps as possible. select a cast or crew member from the first film, then select a film from that person's filmography. repeat until you reach the last film.">
+  <meta property="og:site_name" content="film in the gaps">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="a collage of film posters with string connecting them as in an investigation evidence wall">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
